# parth-ipc-benchmark-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
EvaluationPipeline/: README.md  build_ipc.sh  createCheckPointScript.py  createFullSimulationScripts.py  createSegSimulationScript.py  parth_docker.def
EvaluationScriptGenerator/: createCheckPointScript.ipynb  createFullSimulationScripts.ipynb  createSegSimulationScript.ipynb
Format/: git-cmake-format.py
PARTH/: HMD.cpp  Integrator.cpp  Parth.cpp  ParthTestUtils.cpp  Parth_utils.cpp
PARTH/include/: HMD.h  Integrator.h  Parth.h  ParthTestUtils.h  ParthTypes.h  Parth_utils.h  csv_utils.h
cmake/find/: FindMKL.cmake
cmake/recipes/: cli11.cmake  sympiler.cmake
input/NoCollision/: MatTwist.txt  armaFall.txt  armaTwist.txt  dolphinFall.txt  dolphinTwist.txt
input/middle/: 12_matOnBoard.txt  13_dolphinFunnel.txt  16_armaRoller_E1e5.txt  16_armaRoller_E1e5_short.txt  1_squeezeOut.txt  4_rodsTwist.txt  8_rollerBall.txt  chain100.txt
input/paperExamples/: 12_matOnBoard.txt
input/resume/: 13_dolphinFunnel.txt  16_armaRoller_E1e5.txt  1_squeezeOut.txt  8_rollerBall.txt  chain100.txt
input/seg/: 12_matOnBoard_seg0.txt  12_matOnBoard_seg1.txt  12_matOnBoard_seg2.txt  12_matOnBoard_seg3.txt  12_matOnBoard_seg4.txt  12_matOnBoard_seg5.txt  12_matOnBoard_seg6.txt  12_matOnBoard_seg7.txt  12_matOnBoard_seg8.txt  12_matOnBoard_seg9.txt  13_dolphinFunnel_seg0.txt  13_dolphinFunnel_seg1.txt  13_dolphinFunnel_seg2.txt  13_dolphinFunnel_seg3.txt  13_dolphinFunnel_seg4.txt  13_dolphinFunnel_seg5.txt  13_dolphinFunnel_seg6.txt  13_dolphinFunnel_seg7.txt  13_dolphinFunnel_seg8.txt  13_dolphinFunnel_seg9.txt  14_matTwist_seg0.txt  14_matTwist_seg1.txt  14_matTwist_seg2.txt  14_matTwist_seg3.txt  14_matTwist_seg4.txt  14_matTwist_seg5.txt  14_matTwist_seg6.txt  14_matTwist_seg7.txt  14_matTwist_seg8.txt  14_matTwist_seg9.txt  16_armaRoller_E1e5_seg0.txt  16_armaRoller_E1e5_seg1.txt  16_armaRoller_E1e5_seg2.txt  16_armaRoller_E1e5_seg3.txt  16_armaRoller_E1e5_seg4.txt  16_armaRoller_E1e5_seg5.txt  16_armaRoller_E1e5_seg6.txt  16_armaRoller_E1e5_seg7.txt  16_armaRoller_E1e5_seg8.txt  16_armaRoller_E1e5_seg9.txt  (+30 more)
scripts/: resultsStats.txt
scripts/CHOLMOD_CHECKPOINT_Test/: run_all.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg0/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg1/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg2/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg3/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg4/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg5/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg6/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg7/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg8/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/12_matOnBoard_seg9/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg0/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg1/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg2/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg3/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg4/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg5/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg6/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg7/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg8/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/13_dolphinFunnel_seg9/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg0/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg1/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg2/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg3/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg4/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg5/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg6/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg7/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg8/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/14_matTwist_seg9/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/16_armaRoller_E1e5_seg0/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/16_armaRoller_E1e5_seg1/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/16_armaRoller_E1e5_seg2/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/16_armaRoller_E1e5_seg3/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
scripts/CHOLMOD_CHECKPOINT_Test/16_armaRoller_E1e5_seg4/: numThreads_20_SolverType_CHOLMOD_IM_0.sh
src/: AnimScripter.cpp  Config.hpp  Mesh.cpp  main.cpp
src/Energy/: Energy.cpp
src/LinSysSolver/: AMGCLSolver.cpp  CGSolver.cpp  CGSolver.hpp  CHOLMODSolver.cpp  CHOLMODSolver.hpp  EigenLibSolver.cpp  EigenLibSolver.hpp  LinSysSolver.cpp  LinSysSolver.hpp  MKLSolver.cpp  MKLSolver.hpp  STRUMPACKSolver.cpp  STRUMPACKSolver.hpp
src/TimeStepper/: Optimizer.cpp
src/Utils/: GIF.cpp  GIF.hpp  csv_utils.h
(+105 files in other folders)
